# dataflux

./: .coveragerc  .flake8  .gitignore  AGENTS.md  Jenkinsfile  Jenkinsfile.local  README.md  pyproject.toml
.github/workflows/: ci.yml
dataflux/: __init__.py  core.py  discovery.py  sample.py  sources.py
dataflux/ops/: __init__.py  numpy.py  torch.py
dataflux/storage/: base.py  directory.py  hdf5.py  zarr.py
examples/: advanced_storage_demo.py  basic_pipeline.py  dataset_split.yaml  discovery_demo.py  hdf5_pipeline.py  parallel_hdf5_stream.py  parallel_pipeline.py  stream_results.h5  test_data.h5
examples/batch_store.zarr/data/c/0/: 0
examples/batch_store.zarr/data/c/1/: 0
examples/batch_store.zarr/data/c/2/: 0
examples/batch_store.zarr/data/c/3/: 0
examples/batch_store.zarr/data/c/4/: 0
examples/batch_store.zarr/data/c/5/: 0
examples/batch_store.zarr/data/c/6/: 0
examples/batch_store.zarr/data/c/7/: 0
examples/batch_store.zarr/data/c/8/: 0
examples/batch_store.zarr/data/c/9/: 0
examples/dir_store/000000/: sample.npz
examples/dir_store/000001/: sample.npz
examples/group_store.zarr/sample_000000/data/c/: 0
examples/group_store.zarr/sample_000001/data/c/: 0
notebooks/: 01 - cat_exploration.ipynb
tests/: test_coverage_gap.py  test_discovery.py  test_flux.py  test_joint.py  test_ops.py  test_parallel.py  test_sample.py  test_sources.py  test_storage.py
