[project]
name = "dataflux"
version = "0.1.0"
description = "Clean, functional data pipelines for ML research and production."
authors = [{ name = "Taidal", email = "info@gearlux.ai" }]
dependencies = [
    "confluid",
    "logflow",
    "numpy",
    "h5py",
    "zarr",
    "torch",
    "typing-extensions",
    "datasets",
]
requires-python = ">=3.12"

[project.optional-dependencies]
dev = [
    "black>=23.0.0",
    "isort>=5.12.0",
    "flake8>=6.0.0",
    "flake8-junit-report>=2.1.0",
    "mypy>=1.0.0",
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "Pillow",
    "intake>=2.0",
    "xarray",
]

[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["dataflux*"]

[tool.setuptools.package-data]
dataflux = ["py.typed"]

[tool.black]
line-length = 120

[tool.isort]
profile = "black"
line_length = 120

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]

[[tool.mypy.overrides]]
module = [
    "datasets.*",
    "h5py.*",
    "PIL.*",
    "zarr.*",
    "intake.*",
    "xarray.*",
]
ignore_missing_imports = true
